Aligned images, view cart btn in menu. Search page fixes

--- a/chatgpt_code/User/CSS/styles.css
+++ b/chatgpt_code/User/CSS/styles.css
@@ -347,6 +347,10 @@ div#menu-category-wise-list{
         width: 33%;
     }
 }
+.item-category img{
+    display: block;
+    margin: auto;
+}
 /* category */
 
 /* search */
